Add unit tests for CreatureBuildListener